Align tags. Fixes #3

--- a/css/sass/_screen_40em_min.scss
+++ b/css/sass/_screen_40em_min.scss
@@ -330,7 +330,8 @@
   min-height:150px;
   
   h2,
-  .item-description {
+  .item-description,
+  .tags {
     padding-left:150px;
   }
   
