--- a/css/style.css
+++ b/css/style.css
@@ -2205,7 +2205,8 @@ body.files .item-file {
     min-height: 150px;
   }
   .item.hentry h2, .item.hentry #item-filters .collection, #item-filters .item.hentry .collection,
-  .item.hentry .item-description {
+  .item.hentry .item-description,
+  .item.hentry .tags {
     padding-left: 150px;
   }
   .item.hentry .item-img {
